# shakespeare

./: .gitignore  README.md  generate.py  pyproject.toml
src/data/: bpe_tokenizer.py  dataset.py  download.py  preprocessing.py
src/evaluation/: evaluate.py
src/model/: __init__.py  architecture.py
src/training/: trainer.py
src/utils/: experiment_tracker.py
